<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_teleop</name>
  <version>0.1.0</version>
  <description>FR3 teleoperation via MoveIt Servo</description>
  <maintainer email="phanikiran1169@gmail.com">Phani Kiran V</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_fr3_moveit_config</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>pymoveit2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
